<resources>
    <string name="app_name">kotlin_sample2</string>
    <string name="height">신장</string>
    <string name="weight">체중</string>
    <string name="confirm">확인하기</string>
    <string name="on_alarm">알람 켜기</string>
    <string name="change_time">시간 재설정</string>
    <string name="save">Save</string>

    <string name="facebook_app_id">847458992863322</string>
    <string name="fb_login_protocol_scheme">fb847458992863322</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">홈</string>
    <string name="search_hint">검색어를 입력해주세요</string>
    <string name="search">검색</string>
    <string name="empty_result_text">검색 결과가 없습니다.</string>

</resources>